--- a/index.html
+++ b/index.html
@@ -28,12 +28,22 @@
     </p>
   </section>
 
-  <section class="gallery">
-    <h2>Gallery</h2>
-    <div class="grid">
-      <!-- images will be added later -->
-    </div>
-  </section>
+<section class="gallery">
+  <h2>Gallery</h2>
+  <div class="grid">
+    <img src="Mandala1.jpg" alt="Mandala Art 1">
+    <img src="Mandala2.jpg" alt="Mandala Art 2">
+    <img src="Mandala3.jpg" alt="Mandala Art 3">
+    <img src="Mandala4.jpg" alt="Mandala Art 4">
+    <img src="Mandala5.jpg" alt="Mandala Art 5">
+    <img src="Mandala6.jpg" alt="Mandala Art 6">
+    <img src="Mandala7.jpg" alt="Mandala Art 7">
+    <img src="Mandala8.jpg" alt="Mandala Art 8">
+    <img src="Mandala9.jpg" alt="Mandala Art 9">
+    <img src="Mandala10.jpg" alt="Mandala Art 10">
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 Chromatic Circles</p>
@@ -41,3 +51,4 @@
 
 </body>
 </html>
+
