--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+  <!-- HEADER -->
   <header class="site-header">
     <h1>CHROMATIC CIRCLES</h1>
     <p class="subtitle">
@@ -20,37 +21,36 @@
     </p>
   </header>
 
+  <!-- ABOUT -->
   <section class="about">
-    <h2>About</h2>
     <p>
       Chromatic Circles is a space for mindful pattern art inspired by symmetry,
       colour, and rhythm. Each artwork is created slowly, with intention and precision.
     </p>
   </section>
 
-<section class="gallery">
-  <h2>Gallery</h2>
-  <div class="grid">
-    <img src="Mandala1.jpg" alt="Mandala Art 1">
-    <img src="Mandala2.jpg" alt="Mandala Art 2">
-    <img src="Mandala3.jpg" alt="Mandala Art 3">
-    <img src="Mandala4.jpg" alt="Mandala Art 4">
-    <img src="Mandala5.jpg" alt="Mandala Art 5">
-    <img src="Mandala6.jpg" alt="Mandala Art 6">
-    <img src="Mandala7.jpg" alt="Mandala Art 7">
-    <img src="Mandala8.jpg" alt="Mandala Art 8">
-    <img src="Mandala9.jpg" alt="Mandala Art 9">
-    <img src="Mandala10.jpg" alt="Mandala Art 10">
-  </div>
-</section>
+  <!-- GALLERY -->
+  <section class="gallery">
+    <h2>Gallery</h2>
 
+    <div class="gallery-grid">
+      <div class="card"><img src="Mandala1.jpg" alt="Mandala Art 1"></div>
+      <div class="card"><img src="Mandala2.jpg" alt="Mandala Art 2"></div>
+      <div class="card"><img src="Mandala3.jpg" alt="Mandala Art 3"></div>
+      <div class="card"><img src="Mandala4.jpg" alt="Mandala Art 4"></div>
+      <div class="card"><img src="Mandala5.jpg" alt="Mandala Art 5"></div>
+      <div class="card"><img src="Mandala6.jpg" alt="Mandala Art 6"></div>
+      <div class="card"><img src="Mandala7.jpg" alt="Mandala Art 7"></div>
+      <div class="card"><img src="Mandala8.jpg" alt="Mandala Art 8"></div>
+      <div class="card"><img src="Mandala9.jpg" alt="Mandala Art 9"></div>
+      <div class="card"><img src="Mandala10.jpg" alt="Mandala Art 10"></div>
+    </div>
+  </section>
 
-
+  <!-- FOOTER -->
   <footer>
-    <p>© 2025 Chromatic Circles</p>
+    © 2025 Chromatic Circles
   </footer>
 
 </body>
 </html>
-
-
