--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style-final.css">
+
 </head>
 
 <body>
@@ -55,4 +56,5 @@
 
 </body>
 </html>
+
 
