--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
   <footer>
     © 2025 Chromatic Circles
   </footer>
+<!-- FULLSCREEN VIEWER -->
+<div id="lightbox" onclick="closeLightbox()">
+  <span class="close">&times;</span>
+  <img id="lightbox-img">
+</div>
 
 </body>
 </html>
+
 
 
 
