--- a/index.html
+++ b/index.html
@@ -59,9 +59,27 @@
   <span class="close">&times;</span>
   <img id="lightbox-img">
 </div>
+<script>
+  const images = document.querySelectorAll('.card img');
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+
+  images.forEach(img => {
+    img.addEventListener('click', () => {
+      lightbox.style.display = 'flex';
+      lightboxImg.src = img.src;
+    });
+  });
+
+  function closeLightbox() {
+    lightbox.style.display = 'none';
+    lightboxImg.src = '';
+  }
+</script>
 
 </body>
 </html>
+
 
 
 
