--- a/index.html
+++ b/index.html
@@ -60,25 +60,32 @@
   <img id="lightbox-img">
 </div>
 <script>
-  const images = document.querySelectorAll('.card img');
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightbox-img');
+  document.addEventListener("DOMContentLoaded", function () {
 
-  images.forEach(img => {
-    img.addEventListener('click', () => {
-      lightbox.style.display = 'flex';
-      lightboxImg.src = img.src;
+    const images = document.querySelectorAll(".card img");
+    const lightbox = document.getElementById("lightbox");
+    const lightboxImg = document.getElementById("lightbox-img");
+
+    images.forEach(img => {
+      img.addEventListener("click", function (e) {
+        e.stopPropagation();
+        lightbox.style.display = "flex";
+        lightboxImg.src = this.src;
+      });
     });
-  });
 
-  function closeLightbox() {
-    lightbox.style.display = 'none';
-    lightboxImg.src = '';
-  }
+    window.closeLightbox = function () {
+      lightbox.style.display = "none";
+      lightboxImg.src = "";
+    };
+
+  });
 </script>
+
 
 </body>
 </html>
+
 
 
 
