--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
+  <!-- Main CSS -->
   <link rel="stylesheet" href="style-final.css">
 </head>
 
 <body>
 
-<!-- NAVBAR -->
+<!-- NAVIGATION -->
 <nav class="navbar">
   <div class="brand">CHROMATIC CIRCLES</div>
   <ul>
@@ -31,8 +32,15 @@
 <!-- HOME -->
 <section id="home" class="hero">
   <h1>CHROMATIC CIRCLES</h1>
-  <p>Mandala • Dot Mandala • Pattern Art<br>Art in Perfect Balance</p>
+  <p>
+    Mandala • Dot Mandala • Pattern Art<br>
+    Art in Perfect Balance
+  </p>
 
+  <div class="hero-buttons">
+    <a href="#photos" class="btn primary">View Gallery</a>
+    <a href="#contact" class="btn outline">Contact</a>
+  </div>
 </section>
 
 <!-- ABOUT -->
@@ -46,20 +54,57 @@
   </p>
 </section>
 
-<!-- PHOTOS -->
+<!-- PHOTOS / GALLERY -->
 <section id="photos" class="section soft">
   <h2>Gallery</h2>
 
   <div class="gallery-grid">
-    <div class="card"><img src="Mandala1.jpg" alt="Mandala Art 1"></div>
-    <div class="card"><img src="Mandala2.jpg" alt="Mandala Art 2"></div>
-    <div class="card"><img src="Mandala3.jpg" alt="Mandala Art 3"></div>
-    <div class="card"><img src="Mandala4.jpg" alt="Mandala Art 4"></div>
-    <div class="card"><img src="Mandala5.jpg" alt="Mandala Art 5"></div>
-    <div class="card"><img src="Mandala6.jpg" alt="Mandala Art 6"></div>
-    <div class="card"><img src="Mandala7.jpg" alt="Mandala Art 7"></div>
-    <div class="card"><img src="Mandala8.jpg" alt="Mandala Art 8"></div>
-    <div class="card"><img src="Mandala9.jpg" alt="Mandala Art 9"></div>
+
+    <div class="card">
+      <img src="Mandala1.jpg" alt="Mandala Art 1">
+      <p class="caption">Mandala Art 1</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala2.jpg" alt="Mandala Art 2">
+      <p class="caption">Mandala Art 2</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala3.jpg" alt="Mandala Art 3">
+      <p class="caption">Mandala Art 3</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala4.jpg" alt="Mandala Art 4">
+      <p class="caption">Mandala Art 4</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala5.jpg" alt="Mandala Art 5">
+      <p class="caption">Mandala Art 5</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala6.jpg" alt="Mandala Art 6">
+      <p class="caption">Mandala Art 6</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala7.jpg" alt="Mandala Art 7">
+      <p class="caption">Mandala Art 7</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala8.jpg" alt="Mandala Art 8">
+      <p class="caption">Mandala Art 8</p>
+    </div>
+
+    <div class="card">
+      <img src="Mandala9.jpg" alt="Mandala Art 9">
+      <p class="caption">Mandala Art 9</p>
+    </div>
+
   </div>
 </section>
 
@@ -67,8 +112,8 @@
 <section id="purchase" class="section">
   <h2>Purchase</h2>
   <p>
-    Selected artworks are available for purchase and commissions.
-    Please reach out for pricing, custom sizes, or exhibition pieces.
+    Selected artworks are available for purchase and custom commissions.
+    Please reach out via Instagram or email for pricing and details.
   </p>
 </section>
 
@@ -94,26 +139,30 @@
   </div>
 </section>
 
+<!-- FOOTER -->
 <footer>
   © 2025 Chromatic Circles
 </footer>
 
-<!-- LIGHTBOX -->
+<!-- FULLSCREEN LIGHTBOX -->
 <div id="lightbox" onclick="closeLightbox()">
   <span class="close">&times;</span>
   <img id="lightbox-img">
 </div>
 
+<!-- SCRIPT -->
 <script>
 document.addEventListener("DOMContentLoaded", function () {
+
   const images = document.querySelectorAll(".card img");
   const lightbox = document.getElementById("lightbox");
   const lightboxImg = document.getElementById("lightbox-img");
 
   images.forEach(img => {
-    img.addEventListener("click", () => {
+    img.addEventListener("click", function (e) {
+      e.stopPropagation();
       lightbox.style.display = "flex";
-      lightboxImg.src = img.src;
+      lightboxImg.src = this.src;
     });
   });
 
@@ -126,4 +175,3 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
-
