--- a/index.html
+++ b/index.html
@@ -30,18 +30,22 @@
 </nav>
 
 <!-- HOME -->
-<section id="home" class="hero">
-  <h1>CHROMATIC CIRCLES</h1>
-  <p>
-    Mandala • Dot Mandala • Pattern Art<br>
-    Art in Perfect Balance
-  </p>
+<section class="hero">
+  <div class="hero-content">
+    <h1>CHROMATIC CIRCLES</h1>
 
-  <div class="hero-buttons">
-    <a href="#photos" class="btn primary">View Gallery</a>
-    <a href="#contact" class="btn outline">Contact</a>
+    <p>
+      Mandala • Dot Mandala • Pattern Art<br>
+      Art in Perfect Balance
+    </p>
+
+    <div class="hero-buttons">
+      <a href="#photos" class="btn primary">View Gallery</a>
+      <a href="#contact" class="btn outline">Contact</a>
+    </div>
   </div>
 </section>
+
 
 <!-- ABOUT -->
 <section id="about" class="section">
@@ -175,3 +179,4 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
