--- a/index.html
+++ b/index.html
@@ -61,56 +61,82 @@
 <!-- PHOTOS / GALLERY -->
 <section id="photos" class="section soft">
   <h2>Gallery</h2>
+<div class="gallery-grid">
 
-  <div class="gallery-grid">
-
-    <div class="card">
-      <img src="Mandala1.jpg" alt="Mandala Art 1">
-      <p class="caption">Mandala Art 1</p>
+  <div class="card">
+    <img src="Mandala1.jpg" alt="Earthfire Mandala">
+    <div class="caption">
+      <strong>Earthfire Mandala</strong><br>
+      <em>A bold composition of fiery reds and burnt oranges, symbolising grounding, strength, and rooted energy through rhythmic geometric layers.</em>
     </div>
-
-    <div class="card">
-      <img src="Mandala2.jpg" alt="Mandala Art 2">
-      <p class="caption">Mandala Art 2</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala3.jpg" alt="Mandala Art 3">
-      <p class="caption">Mandala Art 3</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala4.jpg" alt="Mandala Art 4">
-      <p class="caption">Mandala Art 4</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala5.jpg" alt="Mandala Art 5">
-      <p class="caption">Mandala Art 5</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala6.jpg" alt="Mandala Art 6">
-      <p class="caption">Mandala Art 6</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala7.jpg" alt="Mandala Art 7">
-      <p class="caption">Mandala Art 7</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala8.jpg" alt="Mandala Art 8">
-      <p class="caption">Mandala Art 8</p>
-    </div>
-
-    <div class="card">
-      <img src="Mandala9.jpg" alt="Mandala Art 9">
-      <p class="caption">Mandala Art 9</p>
-    </div>
-
   </div>
-</section>
+
+  <div class="card">
+    <img src="Mandala2.jpg" alt="Sacred Harmony Wall Hanging">
+    <div class="caption">
+      <strong>Sacred Harmony Wall Hanging</strong><br>
+      <em>A layered mandala wall piece blending circular and diamond forms, enhanced with beads and feathers to represent balance, protection, and flow.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala3.jpg" alt="Azure Rhythm Mandala">
+    <div class="caption">
+      <strong>Azure Rhythm Mandala</strong><br>
+      <em>Cool blues and soft purples move in perfect symmetry, creating a calming visual rhythm inspired by stillness and clarity.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
+    <div class="caption">
+      <strong>Monochrome Balance Mandala</strong><br>
+      <em>A minimal black-and-white mandala that highlights precision, symmetry, and contrast—where simplicity meets depth.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
+    <div class="caption">
+      <strong>Lotus Geometry Mandala</strong><br>
+      <em>A floral mandala with lotus-inspired patterns, symbolising inner awakening, growth, and mindful repetition.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala6.jpg" alt="Golden Aura Mandala">
+    <div class="caption">
+      <strong>Golden Aura Mandala</strong><br>
+      <em>Warm yellows and intricate detailing radiate positivity and abundance, reflecting sunlight, optimism, and creative energy.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
+    <div class="caption">
+      <strong>Royal Bloom Mandala</strong><br>
+      <em>Deep blues and vibrant pinks merge in a floral geometry, representing elegance, emotional depth, and expressive harmony.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala8.jpg" alt="Dual Essence Mandala">
+    <div class="caption">
+      <strong>Dual Essence Mandala</strong><br>
+      <em>A striking half-and-half mandala exploring contrast—light and dark, tradition and modernity—united through symmetry.</em>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
+    <div class="caption">
+      <strong>Spectrum Layers Mandala</strong><br>
+      <em>Overlapping arcs of vibrant colours form a dynamic layered composition, celebrating diversity, movement, and artistic freedom.</em>
+    </div>
+  </div>
+
+</div>
+
 
 <!-- PURCHASE -->
 <section id="purchase" class="section">
@@ -179,4 +205,5 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
