--- a/index.html
+++ b/index.html
@@ -49,12 +49,23 @@
 
 <!-- ABOUT -->
 <section id="about" class="section">
-  <h2>About the Artist</h2>
+ <h2>About Chromatic Circles</h2>
   <p class="about-text">
-    Chromatic Circles is a mindful exploration of symmetry, colour, and rhythm.
-    Each artwork is created slowly, with patience and intention, allowing the
-    process itself to become meditative. What began as curiosity gradually
-    evolved into a focused artistic journey rooted in balance and precision.
+<p>
+Chromatic Circles is a mindful art space dedicated to mandala, dot mandala, and pattern-based artworks.
+Rooted in symmetry, colour, and rhythm, each piece is created slowly and intentionally,
+reflecting balance, harmony, and inner stillness through detailed geometric expression.
+</p>
+
+  </p>
+</section>
+<section id="artist" class="section">
+  <h2>About the Artist</h2>
+  <p>
+My mandala journey began during the COVID-19 lockdown, sparked by curiosity and the desire
+to learn a new art form. What started as a hobby soon evolved into a deep passion.
+Through sleepless nights, layered patterns, and mindful repetition, I explored mandala,
+dot mandala, and lippan art as a form of meditation and expression.
   </p>
 </section>
 
@@ -136,6 +147,26 @@
   </div>
 
 </div>
+<section id="reviews" class="section">
+  <h2>Customer Reviews</h2>
+
+  <div class="reviews">
+    <div class="review-card">
+      <p><em>"The detailing and colour balance are stunning. The artwork brings so much calm into my space."</em></p>
+      <strong>— Ananya R.</strong>
+    </div>
+
+    <div class="review-card">
+      <p><em>"Absolutely loved the craftsmanship. You can feel the patience and intention in every dot."</em></p>
+      <strong>— Suresh K.</strong>
+    </div>
+
+    <div class="review-card">
+      <p><em>"A beautiful blend of tradition and modern design. Truly unique mandala art."</em></p>
+      <strong>— Meera P.</strong>
+    </div>
+  </div>
+</section>
 
 
 <!-- PURCHASE -->
@@ -205,5 +236,6 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
