--- a/index.html
+++ b/index.html
@@ -17,225 +17,173 @@
 
 <body>
 
-<!-- NAVIGATION -->
+<!-- NAVBAR -->
 <nav class="navbar">
   <div class="brand">CHROMATIC CIRCLES</div>
   <ul>
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
-    <li><a href="#photos">Photos</a></li>
-    <li><a href="#purchase">Purchase</a></li>
+    <li><a href="#artist">Artist</a></li>
+    <li><a href="#photos">Gallery</a></li>
+    <li><a href="#reviews">Reviews</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
 </nav>
 
 <!-- HOME -->
-<section class="hero">
+<section id="home" class="hero">
   <div class="hero-content">
     <h1>CHROMATIC CIRCLES</h1>
-
     <p>
       Mandala • Dot Mandala • Pattern Art<br>
       Art in Perfect Balance
     </p>
-
-    <div class="hero-buttons">
-      <a href="#photos" class="btn primary">View Gallery</a>
-      <a href="#contact" class="btn outline">Contact</a>
-    </div>
   </div>
 </section>
 
-
-<!-- ABOUT -->
+<!-- ABOUT CHROMATIC CIRCLES -->
 <section id="about" class="section">
- <h2>About Chromatic Circles</h2>
-  <p class="about-text">
-<p>
-Chromatic Circles is a mindful art space dedicated to mandala, dot mandala, and pattern-based artworks.
-Rooted in symmetry, colour, and rhythm, each piece is created slowly and intentionally,
-reflecting balance, harmony, and inner stillness through detailed geometric expression.
-</p>
-
+  <h2>About Chromatic Circles</h2>
+  <p>
+    Chromatic Circles is a mindful art space dedicated to mandala, dot mandala, and
+    pattern-based artworks. Each piece is created slowly and intentionally,
+    reflecting balance, harmony, and inner stillness through geometric expression.
   </p>
 </section>
-<section id="artist" class="section">
+
+<!-- ABOUT THE ARTIST -->
+<section id="artist" class="section soft">
   <h2>About the Artist</h2>
   <p>
-My mandala journey began during the COVID-19 lockdown, sparked by curiosity and the desire
-to learn a new art form. What started as a hobby soon evolved into a deep passion.
-Through sleepless nights, layered patterns, and mindful repetition, I explored mandala,
-dot mandala, and lippan art as a form of meditation and expression.
+    My mandala journey began during the COVID-19 lockdown, sparked by curiosity and
+    a desire to learn a new art form. What started as a hobby slowly evolved into
+    a deep passion, explored through mandala, dot mandala, and lippan art.
   </p>
 </section>
 
-<!-- PHOTOS / GALLERY -->
-<section id="photos" class="section soft">
+<!-- GALLERY -->
+<section id="photos" class="section">
   <h2>Gallery</h2>
-<div class="gallery-grid">
 
-  <div class="card">
-    <img src="Mandala1.jpg" alt="Earthfire Mandala">
-    <div class="caption">
-      <strong>Earthfire Mandala</strong><br>
-      <em>A bold composition of fiery reds and burnt oranges, symbolising grounding, strength, and rooted energy through rhythmic geometric layers.</em>
+  <div class="gallery-grid">
+
+    <div class="card">
+      <img src="Mandala1.jpg" alt="Earthfire Mandala">
+      <div class="caption">
+        <strong>Earthfire Mandala</strong>
+        <em>A bold composition of fiery reds and burnt oranges, symbolising grounding and strength.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala2.jpg" alt="Sacred Harmony Wall Hanging">
-    <div class="caption">
-      <strong>Sacred Harmony Wall Hanging</strong><br>
-      <em>A layered mandala wall piece blending circular and diamond forms, enhanced with beads and feathers to represent balance, protection, and flow.</em>
+    <div class="card">
+      <img src="Mandala2.jpg" alt="Sacred Harmony Wall Hanging">
+      <div class="caption">
+        <strong>Sacred Harmony Wall Hanging</strong>
+        <em>A layered mandala wall piece representing balance and protection.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala3.jpg" alt="Azure Rhythm Mandala">
-    <div class="caption">
-      <strong>Azure Rhythm Mandala</strong><br>
-      <em>Cool blues and soft purples move in perfect symmetry, creating a calming visual rhythm inspired by stillness and clarity.</em>
+    <div class="card">
+      <img src="Mandala3.jpg" alt="Azure Rhythm Mandala">
+      <div class="caption">
+        <strong>Azure Rhythm Mandala</strong>
+        <em>Cool blues and purples creating a calming visual rhythm.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
-    <div class="caption">
-      <strong>Monochrome Balance Mandala</strong><br>
-      <em>A minimal black-and-white mandala that highlights precision, symmetry, and contrast—where simplicity meets depth.</em>
+    <div class="card">
+      <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
+      <div class="caption">
+        <strong>Monochrome Balance Mandala</strong>
+        <em>Precision, symmetry, and contrast in black and white.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
-    <div class="caption">
-      <strong>Lotus Geometry Mandala</strong><br>
-      <em>A floral mandala with lotus-inspired patterns, symbolising inner awakening, growth, and mindful repetition.</em>
+    <div class="card">
+      <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
+      <div class="caption">
+        <strong>Lotus Geometry Mandala</strong>
+        <em>Lotus-inspired patterns symbolising growth and mindfulness.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala6.jpg" alt="Golden Aura Mandala">
-    <div class="caption">
-      <strong>Golden Aura Mandala</strong><br>
-      <em>Warm yellows and intricate detailing radiate positivity and abundance, reflecting sunlight, optimism, and creative energy.</em>
+    <div class="card">
+      <img src="Mandala6.jpg" alt="Golden Aura Mandala">
+      <div class="caption">
+        <strong>Golden Aura Mandala</strong>
+        <em>Warm yellows radiating positivity and abundance.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
-    <div class="caption">
-      <strong>Royal Bloom Mandala</strong><br>
-      <em>Deep blues and vibrant pinks merge in a floral geometry, representing elegance, emotional depth, and expressive harmony.</em>
+    <div class="card">
+      <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
+      <div class="caption">
+        <strong>Royal Bloom Mandala</strong>
+        <em>Floral geometry blending elegance and emotion.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala8.jpg" alt="Dual Essence Mandala">
-    <div class="caption">
-      <strong>Dual Essence Mandala</strong><br>
-      <em>A striking half-and-half mandala exploring contrast—light and dark, tradition and modernity—united through symmetry.</em>
+    <div class="card">
+      <img src="Mandala8.jpg" alt="Dual Essence Mandala">
+      <div class="caption">
+        <strong>Dual Essence Mandala</strong>
+        <em>Exploring contrast through symmetry.</em>
+      </div>
     </div>
-  </div>
 
-  <div class="card">
-    <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
-    <div class="caption">
-      <strong>Spectrum Layers Mandala</strong><br>
-      <em>Overlapping arcs of vibrant colours form a dynamic layered composition, celebrating diversity, movement, and artistic freedom.</em>
+    <div class="card">
+      <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
+      <div class="caption">
+        <strong>Spectrum Layers Mandala</strong>
+        <em>Vibrant layers celebrating movement and diversity.</em>
+      </div>
     </div>
-  </div>
 
-</div>
-<section id="reviews" class="section">
+  </div>
+</section>
+
+<!-- CUSTOMER REVIEWS -->
+<section id="reviews" class="section soft">
   <h2>Customer Reviews</h2>
 
-  <div class="reviews">
+  <div class="reviews-wrapper">
     <div class="review-card">
-      <p><em>"The detailing and colour balance are stunning. The artwork brings so much calm into my space."</em></p>
+      <em>“The detailing and colour balance are stunning. Very calming.”</em>
       <strong>— Ananya R.</strong>
     </div>
 
     <div class="review-card">
-      <p><em>"Absolutely loved the craftsmanship. You can feel the patience and intention in every dot."</em></p>
+      <em>“You can feel the patience and intention in every dot.”</em>
       <strong>— Suresh K.</strong>
     </div>
 
     <div class="review-card">
-      <p><em>"A beautiful blend of tradition and modern design. Truly unique mandala art."</em></p>
+      <em>“A beautiful blend of tradition and modern design.”</em>
       <strong>— Meera P.</strong>
     </div>
   </div>
 </section>
 
-
-<!-- PURCHASE -->
-<section id="purchase" class="section">
-  <h2>Purchase</h2>
-  <p>
-    Selected artworks are available for purchase and custom commissions.
-    Please reach out via Instagram or email for pricing and details.
-  </p>
-</section>
-
 <!-- CONTACT -->
-<section id="contact" class="section soft">
+<section id="contact" class="section">
   <h2>Contact</h2>
 
   <div class="contact-icons">
     <a href="https://instagram.com/chromaticcircles" target="_blank">
-      <i class="fab fa-instagram"></i>
-      <span>@chromaticcircles</span>
+      <i class="fab fa-instagram"></i> @chromaticcircles
     </a>
-
     <a href="mailto:chromaticcircles@gmail.com">
-      <i class="fas fa-envelope"></i>
-      <span>chromaticcircles@gmail.com</span>
+      <i class="fas fa-envelope"></i> chromaticcircles@gmail.com
     </a>
-
     <a href="tel:+919999999999">
-      <i class="fas fa-phone"></i>
-      <span>+91 99999 99999</span>
+      <i class="fas fa-phone"></i> +91 99999 99999
     </a>
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer>
   © 2025 Chromatic Circles
 </footer>
 
-<!-- FULLSCREEN LIGHTBOX -->
-<div id="lightbox" onclick="closeLightbox()">
-  <span class="close">&times;</span>
-  <img id="lightbox-img">
-</div>
-
-<!-- SCRIPT -->
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-
-  const images = document.querySelectorAll(".card img");
-  const lightbox = document.getElementById("lightbox");
-  const lightboxImg = document.getElementById("lightbox-img");
-
-  images.forEach(img => {
-    img.addEventListener("click", function (e) {
-      e.stopPropagation();
-      lightbox.style.display = "flex";
-      lightboxImg.src = this.src;
-    });
-  });
-
-  window.closeLightbox = function () {
-    lightbox.style.display = "none";
-    lightboxImg.src = "";
-  };
-});
-</script>
-
 </body>
 </html>
-
-
-
