--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <div class="card">
       <img src="Mandala1.jpg" alt="Earthfire Mandala">
       <div class="caption">
-        <strong>Earthfire Mandala</strong>
+       <strong>Earthfire Lippan Art</strong>
+
         <em>A bold composition of fiery reds and burnt oranges, symbolising grounding and strength.</em>
       </div>
     </div>
@@ -78,7 +79,8 @@
     <div class="card">
       <img src="Mandala2.jpg" alt="Sacred Harmony Wall Hanging">
       <div class="caption">
-        <strong>Sacred Harmony Wall Hanging</strong>
+        <strong>Sacred Harmony Lippan Art</strong>
+
         <em>A layered mandala wall piece representing balance and protection.</em>
       </div>
     </div>
@@ -86,7 +88,8 @@
     <div class="card">
       <img src="Mandala3.jpg" alt="Azure Rhythm Mandala">
       <div class="caption">
-        <strong>Azure Rhythm Mandala</strong>
+      <strong>Azure Rhythm Lippan Art</strong>
+
         <em>Cool blues and purples creating a calming visual rhythm.</em>
       </div>
     </div>
@@ -94,7 +97,8 @@
     <div class="card">
       <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
       <div class="caption">
-        <strong>Monochrome Balance Mandala</strong>
+     <strong>Monochrome Balance Lippan Art</strong>
+
         <em>Precision, symmetry, and contrast in black and white.</em>
       </div>
     </div>
@@ -102,7 +106,8 @@
     <div class="card">
       <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
       <div class="caption">
-        <strong>Lotus Geometry Mandala</strong>
+ <strong>Lotus Geometry Lippan Art</strong>
+
         <em>Lotus-inspired patterns symbolising growth and mindfulness.</em>
       </div>
     </div>
@@ -110,7 +115,8 @@
     <div class="card">
       <img src="Mandala6.jpg" alt="Golden Aura Mandala">
       <div class="caption">
-        <strong>Golden Aura Mandala</strong>
+<strong>Golden Aura Lippan Art</strong>
+
         <em>Warm yellows radiating positivity and abundance.</em>
       </div>
     </div>
@@ -118,7 +124,8 @@
     <div class="card">
       <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
       <div class="caption">
-        <strong>Royal Bloom Mandala</strong>
+        <strong>Royal Bloom Lippan Art</strong>
+
         <em>Floral geometry blending elegance and emotion.</em>
       </div>
     </div>
@@ -126,7 +133,8 @@
     <div class="card">
       <img src="Mandala8.jpg" alt="Dual Essence Mandala">
       <div class="caption">
-        <strong>Dual Essence Mandala</strong>
+        <strong>Dual Essence Lippan Art</strong>
+
         <em>Exploring contrast through symmetry.</em>
       </div>
     </div>
@@ -134,7 +142,8 @@
     <div class="card">
       <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
       <div class="caption">
-        <strong>Spectrum Layers Mandala</strong>
+       <strong>Spectrum Layers Lippan Art</strong>
+
         <em>Vibrant layers celebrating movement and diversity.</em>
       </div>
     </div>
@@ -187,3 +196,4 @@
 
 </body>
 </html>
+
