--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="card">
       <img src="Mandala8.jpg" alt="Dual Essence Mandala">
       <div class="caption">
-        <strong>Dual Essence Lippan Art</strong>
+        <strong>Dual Essence Mandala and Lippan </strong>
 
         <em>Exploring contrast through symmetry.</em>
       </div>
@@ -196,4 +196,5 @@
 
 </body>
 </html>
+
 
