--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <img src="Mandala1.jpg" alt="Earthfire Mandala">
       <div class="caption">
        <strong>Earthfire Lippan Art</strong>
-
+  <span class="size">Size: 16 inches</span>
         <em>A bold composition of fiery reds and burnt oranges, symbolising grounding and strength.</em>
       </div>
     </div>
@@ -80,7 +80,7 @@
       <img src="Mandala2.jpg" alt="Sacred Harmony Wall Hanging">
       <div class="caption">
         <strong>Sacred Harmony Lippan Art</strong>
-
+<span class="size">Size: Combination of three pieces – 12", 10.5" and 6"</span>
         <em>A layered mandala wall piece representing balance and protection.</em>
       </div>
     </div>
@@ -89,7 +89,7 @@
       <img src="Mandala3.jpg" alt="Azure Rhythm Mandala">
       <div class="caption">
       <strong>Azure Rhythm Lippan Art</strong>
-
+  <span class="size">Size: Two pieces – 10.5" and 6"</span>
         <em>Cool blues and purples creating a calming visual rhythm.</em>
       </div>
     </div>
@@ -98,7 +98,7 @@
       <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
       <div class="caption">
      <strong>Monochrome Balance Lippan Art</strong>
-
+<span class="size">Size: 12 inches</span>
         <em>Precision, symmetry, and contrast in black and white.</em>
       </div>
     </div>
@@ -107,7 +107,7 @@
       <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
       <div class="caption">
  <strong>Lotus Geometry Lippan Art</strong>
-
+<span class="size">Size: 12 inches (Square)</span>
         <em>Lotus-inspired patterns symbolising growth and mindfulness.</em>
       </div>
     </div>
@@ -116,7 +116,7 @@
       <img src="Mandala6.jpg" alt="Golden Aura Mandala">
       <div class="caption">
 <strong>Golden Aura Lippan Art</strong>
-
+<span class="size">Size: 12 inches</span>
         <em>Warm yellows radiating positivity and abundance.</em>
       </div>
     </div>
@@ -125,7 +125,7 @@
       <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
       <div class="caption">
         <strong>Royal Bloom Lippan Art</strong>
-
+<span class="size">Size: 12 inches</span>
         <em>Floral geometry blending elegance and emotion.</em>
       </div>
     </div>
@@ -134,7 +134,7 @@
       <img src="Mandala8.jpg" alt="Dual Essence Mandala">
       <div class="caption">
         <strong>Dual Essence Mandala and Lippan </strong>
-
+<span class="size">Size: 16 inches</span>
         <em>Exploring contrast through symmetry.</em>
       </div>
     </div>
@@ -143,7 +143,7 @@
       <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
       <div class="caption">
        <strong>Spectrum Layers Lippan Art</strong>
-
+ <span class="size">Size: 12 inches (Square)</span>
         <em>Vibrant layers celebrating movement and diversity.</em>
       </div>
     </div>
@@ -196,5 +196,6 @@
 
 </body>
 </html>
+
 
 
