--- a/index.html
+++ b/index.html
@@ -176,18 +176,20 @@
 <!-- CONTACT -->
 <section id="contact" class="section">
   <h2>Contact</h2>
+<div class="contact-icons">
+  <a href="https://instagram.com/chromatics_circles" target="_blank">
+    <i class="fab fa-instagram"></i> @chromatics_circles
+  </a>
 
-  <div class="contact-icons">
-    <a href="https://instagram.com/chromaticcircles" target="_blank">
-      <i class="fab fa-instagram"></i> @chromaticcircles
-    </a>
-    <a href="mailto:chromaticcircles@gmail.com">
-      <i class="fas fa-envelope"></i> chromaticcircles@gmail.com
-    </a>
-    <a href="tel:+919999999999">
-      <i class="fas fa-phone"></i> +91 99999 99999
-    </a>
-  </div>
+  <a href="mailto:chromaticscircles@gmail.com">
+    <i class="fas fa-envelope"></i> chromaticscircles@gmail.com
+  </a>
+
+  <a href="tel:+919449549036">
+    <i class="fas fa-phone"></i> +91-9449549036
+  </a>
+</div>
+
 </section>
 
 <footer>
@@ -196,6 +198,7 @@
 
 </body>
 </html>
+
 
 
 
