--- a/index.html
+++ b/index.html
@@ -155,23 +155,36 @@
 <section id="reviews" class="section soft">
   <h2>Customer Reviews</h2>
 
-  <div class="reviews-wrapper">
+  <div class="reviews-row">
+
     <div class="review-card">
-      <em>“The detailing and colour balance are stunning. Very calming.”</em>
-      <strong>— Ananya R.</strong>
+      <p>
+        It feels like just yesterday that Deepti created her very first mandala
+        and swept us all off our feet. Since then, her art has continuously
+        evolved—growing more intricate, complex, and beautifully detailed with
+        time. Today, she creates expansive 23-inch designs with remarkable grace,
+        passion, and intention.
+        <br><br>
+        What began as a simple hobby has now blossomed into true craftsmanship.
+        Her mandalas have a way of aligning and centering us, almost becoming the
+        quiet core of my own dance practice. Deepti is truly a beautiful, budding
+        artist—one whose work carries peace, elegance, and a sense of calm
+        wherever it reaches.
+      </p>
+      <strong>— Harini</strong>
     </div>
 
     <div class="review-card">
-      <em>“You can feel the patience and intention in every dot.”</em>
-      <strong>— Suresh K.</strong>
+      <p>
+        I had bought Lippan art from Deepti and I liked it very much.
+        The details are intricately made.
+      </p>
+      <strong>— Arpitha</strong>
     </div>
 
-    <div class="review-card">
-      <em>“A beautiful blend of tradition and modern design.”</em>
-      <strong>— Meera P.</strong>
-    </div>
   </div>
 </section>
+
 
 <!-- CONTACT -->
 <section id="contact" class="section">
@@ -227,6 +240,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
