--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
 <section id="reviews" class="section soft">
   <h2>Customer Reviews</h2>
 
-  <div class="reviews-row">
-
+  <div class="reviews-wrapper">
     <div class="review-card">
       <p>
         It feels like just yesterday that Deepti created her very first mandala
@@ -240,6 +239,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
