--- a/index.html
+++ b/index.html
@@ -54,12 +54,50 @@
 <!-- ABOUT THE ARTIST -->
 <section id="artist" class="section soft">
   <h2>About the Artist</h2>
+
   <p>
-    My mandala journey began during the COVID-19 lockdown, sparked by curiosity and
-    a desire to learn a new art form. What started as a hobby slowly evolved into
-    a deep passion, explored through mandala, dot mandala, and lippan art.
+    <strong>Deepti Padmanabha</strong>
+  </p>
+
+  <p>
+    I started my mandala journey during the lockdown periods of the COVID-19
+    pandemic, purely out of curiosity and the thought of learning a new art.
+    With more time on my hands at home, I decided to explore mandalas as a hobby.
+  </p>
+
+  <p>
+    I began with simple designs, gradually understanding the importance of
+    patterns and symmetry required to create balance. Often, I would start a
+    piece around 11:00 pm and continue working through the night until 3:00 am,
+    fully immersed in the design taking shape.
+  </p>
+
+  <p>
+    As my passion grew, I started exploring dot mandalas and later expanded my
+    practice to include Lippan art. Sleepless nights, complete focus on a single
+    artwork, and the appreciation I received for my work kept motivating me and
+    shaped what my art has become today.
+  </p>
+
+  <p>
+    Over time, this slow and mindful learning transformed into a deeply
+    fulfilling creative journey. Along the way, I sold some of my artworks and
+    donated the proceeds to Rotary RajMahal Vilas.
+  </p>
+
+  <p>
+    At present, I am working on a round canvas measuring approximately 23 inches
+    — something that once felt impossible but has now become a reality created
+    with my whole heart.
+  </p>
+
+  <p>
+    Reflecting on this journey, I see how curiosity gradually turned into
+    confidence, and a simple interest evolved into a meaningful form of artistic
+    expression that continues to keep me engaged and inspired.
   </p>
 </section>
+
 
 <!-- GALLERY -->
 <section id="photos" class="section">
@@ -239,6 +277,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
