--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </p>
 
   <p>
-    I started my mandala journey during the lockdown periods of the COVID-19
+    I started my mandala journey during the lockdown period of the COVID-19
     pandemic, purely out of curiosity and the thought of learning a new art.
     With more time on my hands at home, I decided to explore mandalas as a hobby.
   </p>
@@ -277,6 +277,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
