--- a/index.html
+++ b/index.html
@@ -131,63 +131,88 @@
         <em>Cool blues and purples creating a calming visual rhythm.</em>
       </div>
     </div>
-
-    <div class="card">
-      <img src="Mandala4.jpg" alt="Monochrome Balance Mandala">
-      <div class="caption">
-     <strong>Monochrome Balance Lippan Art</strong>
-<span class="size">Size: 12 inches</span>
-        <em>Precision, symmetry, and contrast in black and white.</em>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="Mandala5.jpg" alt="Lotus Geometry Mandala">
-      <div class="caption">
- <strong>Lotus Geometry Lippan Art</strong>
-<span class="size">Size: 12 inches (Square)</span>
-        <em>Lotus-inspired patterns symbolising growth and mindfulness.</em>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="Mandala6.jpg" alt="Golden Aura Mandala">
-      <div class="caption">
-<strong>Golden Aura Lippan Art</strong>
-<span class="size">Size: 12 inches</span>
-        <em>Warm yellows radiating positivity and abundance.</em>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="Mandala7.jpg" alt="Royal Bloom Mandala">
-      <div class="caption">
-        <strong>Royal Bloom Lippan Art</strong>
-<span class="size">Size: 12 inches</span>
-        <em>Floral geometry blending elegance and emotion.</em>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="Mandala8.jpg" alt="Dual Essence Mandala">
-      <div class="caption">
-        <strong>Dual Essence Mandala and Lippan </strong>
-<span class="size">Size: 16 inches</span>
-        <em>Exploring contrast through symmetry.</em>
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="Mandala9.jpg" alt="Spectrum Layers Mandala">
-      <div class="caption">
-       <strong>Spectrum Layers Lippan Art</strong>
- <span class="size">Size: 12 inches (Square)</span>
-        <em>Vibrant layers celebrating movement and diversity.</em>
-      </div>
-    </div>
-
+<!-- Mandala 4 -->
+<div class="card">
+  <img src="Mandala4.jpg" alt="Solar Flutter Mandala">
+  <div class="caption">
+    <strong>Solar Flutter Mandala</strong>
+    <em>
+      A butterfly-shaped dot mandala radiating warmth and vitality. Earthy reds,
+      yellows, and whites come together in delicate symmetry, symbolising
+      transformation, balance, and joyful movement.
+    </em>
+    <span class="size">Size: 7.4 inches</span>
   </div>
-</section>
+</div>
+
+<!-- Mandala 5 -->
+<div class="card">
+  <img src="Mandala5.jpg" alt="Harmony Bloom Mandala">
+  <div class="caption">
+    <strong>Harmony Bloom Mandala</strong>
+    <em>
+      A vibrant circular dot mandala built layer by layer in rhythmic colour.
+      Each ring flows seamlessly into the next, representing harmony,
+      continuity, and mindful focus.
+    </em>
+    <span class="size">Size: 16 inches</span>
+  </div>
+</div>
+
+<!-- Mandala 6 -->
+<div class="card">
+  <img src="Mandala6.jpg" alt="Midnight Garden Mandala">
+  <div class="caption">
+    <strong>Midnight Garden Mandala</strong>
+    <em>
+      An intricate dot mandala inspired by nature and depth. Rich colours emerge
+      against a dark base, creating a meditative piece that invites stillness,
+      patience, and quiet strength.
+    </em>
+    <span class="size">Size: 22 inches</span>
+  </div>
+</div>
+
+<!-- Mandala 7 -->
+<div class="card">
+  <img src="Mandala7.jpg" alt="Golden Geometry Mandala">
+  <div class="caption">
+    <strong>Golden Geometry Mandala</strong>
+    <em>
+      A hand-drawn mandala in black and gold tones, exploring geometric repetition
+      and floral symmetry. A calm yet striking composition rooted in traditional
+      pattern work.
+    </em>
+    <span class="size">Size: A4</span>
+  </div>
+</div>
+
+<!-- Mandala 8 -->
+<div class="card">
+  <img src="Mandala8.jpg" alt="Interwoven Balance Mandala">
+  <div class="caption">
+    <strong>Interwoven Balance Mandala</strong>
+    <em>
+      Overlapping circular mandalas merge into a unified design, symbolising
+      connection, balance, and the harmony of multiple perspectives.
+    </em>
+    <span class="size">Size: A4</span>
+  </div>
+</div>
+
+<!-- Mandala 9 -->
+<div class="card">
+  <img src="Mandala9.jpg" alt="Monochrome Rhythm Mandala">
+  <div class="caption">
+    <strong>Monochrome Rhythm Mandala</strong>
+    <em>
+      A bold black-and-white mandala segment highlighting intricate line work and
+      pattern density. A study in contrast, movement, and disciplined detail.
+    </em>
+    <span class="size">Size: A4</span>
+  </div>
+</div>
+
 
 <!-- CUSTOMER REVIEWS -->
 <section id="reviews" class="section soft">
@@ -277,6 +302,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
